[gd_scene load_steps=15 format=3 uid="uid://1l3kj571mj3c"]

[ext_resource type="Script" path="res://Prefabs/PlantEvents/LeafPull/LeafPullPoint.gd" id="1_553wl"]
[ext_resource type="Texture2D" uid="uid://dbevkhfnbxgpp" path="res://Asesprite/Leafes.png" id="2_31rk0"]
[ext_resource type="Script" path="res://addons/godot-xr-tools/rumble/rumble_event.gd" id="2_ld8fa"]
[ext_resource type="PackedScene" uid="uid://c8l60rnugru40" path="res://addons/godot-xr-tools/objects/pickable.tscn" id="3_fh8m4"]
[ext_resource type="Script" path="res://addons/godot-xr-tools/objects/highlight/highlight_visible.gd" id="4_5ntvn"]
[ext_resource type="Material" uid="uid://cq1x3i8pni2ak" path="res://Materials/Highlight.tres" id="5_j0x7c"]
[ext_resource type="PackedScene" uid="uid://bpo28usqu411" path="res://Prefabs/PlantEvents/LeafPull/PullLeaf.tscn" id="8_6fdsa"]

[sub_resource type="Resource" id="Resource_lgjmh"]
script = ExtResource("2_ld8fa")
magnitude = 1.0
active_during_pause = false
indefinite = true
duration_ms = 300

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dl7k8"]
resource_name = "Leaves"
transparency = 2
alpha_scissor_threshold = 0.5
alpha_antialiasing_mode = 0
cull_mode = 2
albedo_texture = ExtResource("2_31rk0")
texture_filter = 2

[sub_resource type="ArrayMesh" id="ArrayMesh_jo6al"]
_surfaces = [{
"aabb": AABB(-0.0175781, 0, -0.0175781, 0.0351563, 0.0339148, 0.0351563),
"format": 34896613377,
"index_count": 156,
"index_data": PackedByteArray(8, 0, 4, 0, 9, 0, 8, 0, 3, 0, 4, 0, 3, 0, 2, 0, 4, 0, 3, 0, 1, 0, 2, 0, 1, 0, 0, 0, 2, 0, 1, 0, 7, 0, 0, 0, 8, 0, 1, 0, 3, 0, 8, 0, 7, 0, 1, 0, 4, 0, 0, 0, 9, 0, 4, 0, 2, 0, 0, 0, 6, 0, 7, 0, 8, 0, 6, 0, 5, 0, 7, 0, 11, 0, 5, 0, 6, 0, 11, 0, 10, 0, 5, 0, 10, 0, 13, 0, 12, 0, 10, 0, 11, 0, 13, 0, 5, 0, 12, 0, 23, 0, 5, 0, 10, 0, 12, 0, 22, 0, 12, 0, 13, 0, 22, 0, 23, 0, 12, 0, 11, 0, 22, 0, 13, 0, 11, 0, 6, 0, 22, 0, 5, 0, 16, 0, 7, 0, 5, 0, 14, 0, 16, 0, 14, 0, 23, 0, 15, 0, 14, 0, 5, 0, 23, 0, 16, 0, 15, 0, 17, 0, 16, 0, 14, 0, 15, 0, 7, 0, 17, 0, 0, 0, 7, 0, 16, 0, 17, 0, 0, 0, 15, 0, 23, 0, 0, 0, 17, 0, 15, 0, 18, 0, 8, 0, 19, 0, 18, 0, 6, 0, 8, 0, 6, 0, 21, 0, 22, 0, 6, 0, 18, 0, 21, 0, 19, 0, 9, 0, 20, 0, 19, 0, 8, 0, 9, 0, 20, 0, 22, 0, 21, 0, 20, 0, 9, 0, 22, 0, 18, 0, 20, 0, 21, 0, 18, 0, 19, 0, 20, 0, 0, 0, 24, 0, 9, 0, 0, 0, 25, 0, 24, 0, 24, 0, 26, 0, 27, 0, 24, 0, 25, 0, 26, 0, 23, 0, 25, 0, 0, 0, 23, 0, 26, 0, 25, 0, 9, 0, 27, 0, 22, 0, 9, 0, 24, 0, 27, 0, 22, 0, 26, 0, 23, 0, 22, 0, 27, 0, 26, 0),
"name": "Leaves",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 28,
"vertex_data": PackedByteArray(170, 170, 233, 176, 170, 170, 0, 0, 255, 255, 0, 0, 170, 170, 0, 0, 255, 255, 233, 176, 170, 170, 0, 0, 255, 255, 0, 0, 85, 85, 0, 0, 255, 255, 233, 176, 85, 85, 0, 0, 85, 85, 0, 0, 170, 170, 0, 0, 85, 85, 0, 0, 85, 85, 0, 0, 170, 170, 0, 0, 170, 170, 0, 0, 170, 170, 0, 0, 85, 85, 0, 0, 170, 170, 233, 176, 85, 85, 0, 0, 0, 0, 0, 0, 170, 170, 0, 0, 0, 0, 0, 0, 85, 85, 0, 0, 0, 0, 233, 176, 170, 170, 0, 0, 0, 0, 233, 176, 85, 85, 0, 0, 85, 85, 0, 0, 255, 255, 0, 0, 85, 85, 233, 176, 255, 255, 0, 0, 170, 170, 0, 0, 255, 255, 0, 0, 170, 170, 233, 176, 255, 255, 0, 0, 85, 85, 0, 0, 0, 0, 0, 0, 170, 170, 0, 0, 0, 0, 0, 0, 170, 170, 233, 176, 0, 0, 0, 0, 85, 85, 233, 176, 0, 0, 0, 0, 85, 85, 233, 176, 85, 85, 0, 0, 85, 85, 233, 176, 170, 170, 0, 0, 170, 170, 255, 255, 85, 85, 0, 0, 170, 170, 255, 255, 170, 170, 0, 0, 85, 85, 255, 255, 170, 170, 0, 0, 85, 85, 255, 255, 85, 85, 0, 0)
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_6vicp"]
resource_name = "LeafPullPoint_Cube_026"
_surfaces = [{
"aabb": AABB(-0.0175781, 0, -0.0175781, 0.0351563, 0.0339148, 0.0351563),
"attribute_data": PackedByteArray(255, 113, 255, 16, 255, 146, 255, 4, 255, 144, 255, 2, 255, 146, 255, 4, 255, 114, 255, 16, 255, 149, 255, 4, 255, 129, 255, 2, 255, 114, 255, 30, 255, 113, 255, 30, 255, 114, 255, 16, 255, 144, 255, 4, 255, 113, 255, 16, 255, 131, 255, 2, 255, 113, 255, 30, 255, 114, 255, 30, 255, 113, 255, 16, 255, 146, 255, 4, 255, 114, 255, 16, 255, 113, 255, 30, 255, 129, 255, 2, 255, 129, 255, 4, 255, 131, 255, 4, 255, 114, 255, 30, 255, 114, 255, 30, 255, 129, 255, 4, 255, 131, 255, 2, 255, 131, 255, 4, 255, 113, 255, 30, 255, 129, 255, 2, 255, 129, 255, 4, 255, 131, 255, 2, 255, 113, 255, 30, 255, 114, 255, 30, 255, 129, 255, 2, 255, 131, 255, 2, 255, 131, 255, 4, 255, 114, 255, 30, 255, 113, 255, 30, 255, 114, 255, 16, 255, 149, 255, 4, 255, 144, 255, 4, 255, 146, 255, 2, 255, 113, 255, 16, 255, 151, 255, 4, 255, 114, 255, 30, 255, 129, 255, 4, 255, 113, 255, 30, 255, 113, 255, 30, 255, 131, 255, 4, 255, 114, 255, 30, 255, 114, 255, 16, 255, 113, 255, 16, 255, 144, 255, 2, 255, 113, 255, 16, 255, 114, 255, 16, 255, 146, 255, 2, 255, 114, 255, 30, 255, 129, 255, 4, 255, 113, 255, 30, 255, 114, 255, 16, 255, 113, 255, 16, 255, 144, 255, 2, 255, 129, 255, 2, 255, 114, 255, 30, 255, 113, 255, 30, 255, 114, 255, 16, 255, 144, 255, 4, 255, 113, 255, 16, 255, 113, 255, 30, 255, 131, 255, 4, 255, 114, 255, 30, 255, 131, 255, 2, 255, 113, 255, 30, 255, 114, 255, 30, 255, 113, 255, 16, 255, 146, 255, 4, 255, 114, 255, 16, 255, 113, 255, 16, 255, 114, 255, 16, 255, 146, 255, 2, 255, 114, 255, 16, 255, 149, 255, 4, 255, 113, 255, 16, 255, 151, 255, 4, 255, 144, 255, 2, 255, 146, 255, 4, 255, 113, 255, 16, 255, 151, 255, 4, 255, 114, 255, 16, 255, 144, 255, 4, 255, 144, 255, 4, 255, 146, 255, 2, 255, 149, 255, 2, 255, 146, 255, 4, 255, 151, 255, 2, 255, 146, 255, 2, 255, 144, 255, 4, 255, 149, 255, 2, 255, 151, 255, 2, 255, 144, 255, 2, 255, 144, 255, 2, 255, 149, 255, 2, 255, 151, 255, 2, 255, 146, 255, 2),
"format": 34896613399,
"index_count": 156,
"index_data": PackedByteArray(36, 0, 15, 0, 38, 0, 36, 0, 13, 0, 15, 0, 14, 0, 11, 0, 17, 0, 14, 0, 8, 0, 11, 0, 7, 0, 0, 0, 9, 0, 7, 0, 31, 0, 0, 0, 35, 0, 6, 0, 12, 0, 35, 0, 29, 0, 6, 0, 16, 0, 2, 0, 41, 0, 16, 0, 10, 0, 2, 0, 26, 0, 28, 0, 34, 0, 26, 0, 20, 0, 28, 0, 48, 0, 19, 0, 25, 0, 48, 0, 45, 0, 19, 0, 44, 0, 53, 0, 50, 0, 44, 0, 47, 0, 53, 0, 22, 0, 51, 0, 88, 0, 22, 0, 46, 0, 51, 0, 85, 0, 52, 0, 55, 0, 85, 0, 90, 0, 52, 0, 49, 0, 82, 0, 54, 0, 49, 0, 27, 0, 82, 0, 21, 0, 62, 0, 30, 0, 21, 0, 57, 0, 62, 0, 56, 0, 86, 0, 59, 0, 56, 0, 18, 0, 86, 0, 63, 0, 60, 0, 65, 0, 63, 0, 58, 0, 60, 0, 32, 0, 67, 0, 4, 0, 32, 0, 64, 0, 67, 0, 3, 0, 61, 0, 91, 0, 3, 0, 66, 0, 61, 0, 69, 0, 33, 0, 71, 0, 69, 0, 24, 0, 33, 0, 23, 0, 77, 0, 80, 0, 23, 0, 68, 0, 77, 0, 73, 0, 42, 0, 76, 0, 73, 0, 37, 0, 42, 0, 75, 0, 84, 0, 79, 0, 75, 0, 40, 0, 84, 0, 70, 0, 74, 0, 78, 0, 70, 0, 72, 0, 74, 0, 5, 0, 94, 0, 43, 0, 5, 0, 97, 0, 94, 0, 93, 0, 100, 0, 103, 0, 93, 0, 96, 0, 100, 0, 89, 0, 95, 0, 1, 0, 89, 0, 99, 0, 95, 0, 39, 0, 102, 0, 83, 0, 39, 0, 92, 0, 102, 0, 81, 0, 98, 0, 87, 0, 81, 0, 101, 0, 98, 0),
"material": SubResource("StandardMaterial3D_dl7k8"),
"name": "Leaves",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 104,
"vertex_data": PackedByteArray(170, 170, 233, 176, 170, 170, 255, 127, 170, 170, 233, 176, 170, 170, 255, 127, 170, 170, 233, 176, 170, 170, 84, 213, 170, 170, 233, 176, 170, 170, 84, 213, 170, 170, 233, 176, 170, 170, 255, 191, 170, 170, 233, 176, 170, 170, 255, 191, 255, 255, 0, 0, 170, 170, 84, 213, 255, 255, 0, 0, 170, 170, 255, 127, 255, 255, 0, 0, 170, 170, 255, 191, 255, 255, 233, 176, 170, 170, 255, 127, 255, 255, 233, 176, 170, 170, 84, 213, 255, 255, 233, 176, 170, 170, 255, 191, 255, 255, 0, 0, 85, 85, 84, 213, 255, 255, 0, 0, 85, 85, 255, 255, 255, 255, 0, 0, 85, 85, 255, 191, 255, 255, 233, 176, 85, 85, 255, 255, 255, 255, 233, 176, 85, 85, 84, 213, 255, 255, 233, 176, 85, 85, 255, 191, 85, 85, 0, 0, 170, 170, 255, 191, 85, 85, 0, 0, 170, 170, 84, 213, 85, 85, 0, 0, 170, 170, 84, 213, 85, 85, 0, 0, 170, 170, 84, 213, 85, 85, 0, 0, 170, 170, 255, 127, 85, 85, 0, 0, 85, 85, 255, 191, 85, 85, 0, 0, 85, 85, 84, 213, 85, 85, 0, 0, 85, 85, 84, 213, 85, 85, 0, 0, 85, 85, 84, 213, 85, 85, 0, 0, 85, 85, 255, 255, 170, 170, 0, 0, 170, 170, 84, 213, 170, 170, 0, 0, 170, 170, 84, 213, 170, 170, 0, 0, 170, 170, 84, 213, 170, 170, 0, 0, 170, 170, 255, 127, 170, 170, 0, 0, 170, 170, 255, 191, 170, 170, 0, 0, 85, 85, 84, 213, 170, 170, 0, 0, 85, 85, 84, 213, 170, 170, 0, 0, 85, 85, 84, 213, 170, 170, 0, 0, 85, 85, 255, 255, 170, 170, 0, 0, 85, 85, 255, 191, 170, 170, 233, 176, 85, 85, 255, 255, 170, 170, 233, 176, 85, 85, 255, 255, 170, 170, 233, 176, 85, 85, 84, 213, 170, 170, 233, 176, 85, 85, 84, 213, 170, 170, 233, 176, 85, 85, 255, 191, 170, 170, 233, 176, 85, 85, 255, 191, 0, 0, 0, 0, 170, 170, 255, 191, 0, 0, 0, 0, 170, 170, 84, 213, 0, 0, 0, 0, 170, 170, 255, 127, 0, 0, 0, 0, 85, 85, 255, 191, 0, 0, 0, 0, 85, 85, 84, 213, 0, 0, 0, 0, 85, 85, 255, 255, 0, 0, 233, 176, 170, 170, 255, 191, 0, 0, 233, 176, 170, 170, 255, 127, 0, 0, 233, 176, 170, 170, 84, 213, 0, 0, 233, 176, 85, 85, 255, 191, 0, 0, 233, 176, 85, 85, 255, 255, 0, 0, 233, 176, 85, 85, 84, 213, 85, 85, 0, 0, 255, 255, 255, 191, 85, 85, 0, 0, 255, 255, 84, 213, 85, 85, 0, 0, 255, 255, 255, 127, 85, 85, 233, 176, 255, 255, 255, 191, 85, 85, 233, 176, 255, 255, 255, 127, 85, 85, 233, 176, 255, 255, 84, 213, 170, 170, 0, 0, 255, 255, 84, 213, 170, 170, 0, 0, 255, 255, 255, 127, 170, 170, 0, 0, 255, 255, 255, 191, 170, 170, 233, 176, 255, 255, 255, 127, 170, 170, 233, 176, 255, 255, 84, 213, 170, 170, 233, 176, 255, 255, 255, 191, 85, 85, 0, 0, 0, 0, 255, 191, 85, 85, 0, 0, 0, 0, 84, 213, 85, 85, 0, 0, 0, 0, 255, 255, 170, 170, 0, 0, 0, 0, 84, 213, 170, 170, 0, 0, 0, 0, 255, 255, 170, 170, 0, 0, 0, 0, 255, 191, 170, 170, 233, 176, 0, 0, 255, 255, 170, 170, 233, 176, 0, 0, 84, 213, 170, 170, 233, 176, 0, 0, 255, 191, 85, 85, 233, 176, 0, 0, 255, 191, 85, 85, 233, 176, 0, 0, 255, 255, 85, 85, 233, 176, 0, 0, 84, 213, 85, 85, 233, 176, 85, 85, 255, 191, 85, 85, 233, 176, 85, 85, 255, 191, 85, 85, 233, 176, 85, 85, 255, 255, 85, 85, 233, 176, 85, 85, 255, 255, 85, 85, 233, 176, 85, 85, 84, 213, 85, 85, 233, 176, 85, 85, 84, 213, 85, 85, 233, 176, 170, 170, 255, 191, 85, 85, 233, 176, 170, 170, 255, 191, 85, 85, 233, 176, 170, 170, 255, 127, 85, 85, 233, 176, 170, 170, 255, 127, 85, 85, 233, 176, 170, 170, 84, 213, 85, 85, 233, 176, 170, 170, 84, 213, 170, 170, 255, 255, 85, 85, 255, 255, 170, 170, 255, 255, 85, 85, 84, 213, 170, 170, 255, 255, 85, 85, 255, 191, 170, 170, 255, 255, 170, 170, 255, 127, 170, 170, 255, 255, 170, 170, 84, 213, 170, 170, 255, 255, 170, 170, 255, 191, 85, 85, 255, 255, 170, 170, 255, 191, 85, 85, 255, 255, 170, 170, 255, 127, 85, 85, 255, 255, 170, 170, 84, 213, 85, 85, 255, 255, 85, 85, 255, 191, 85, 85, 255, 255, 85, 85, 255, 255, 85, 85, 255, 255, 85, 85, 84, 213, 255, 127, 255, 255, 255, 127, 255, 255, 84, 213, 170, 42, 84, 213, 170, 42, 255, 127, 0, 0, 255, 127, 0, 0, 84, 85, 84, 85, 255, 127, 255, 255, 255, 127, 0, 0, 255, 127, 255, 255, 84, 213, 170, 42, 255, 127, 0, 0, 84, 85, 84, 85, 255, 127, 255, 255, 255, 127, 0, 0, 255, 127, 255, 255, 84, 213, 170, 42, 255, 127, 0, 0, 255, 127, 255, 255, 84, 85, 84, 85, 84, 85, 84, 85, 84, 85, 84, 85, 255, 127, 255, 255, 255, 127, 255, 255, 84, 85, 84, 85, 84, 85, 84, 85, 84, 85, 84, 85, 255, 127, 255, 255, 84, 85, 84, 85, 84, 85, 84, 85, 84, 85, 84, 85, 255, 127, 255, 255, 255, 127, 0, 0, 84, 85, 84, 85, 84, 85, 84, 85, 84, 85, 84, 85, 255, 127, 255, 255, 255, 127, 0, 0, 255, 127, 255, 255, 255, 127, 255, 255, 84, 213, 170, 42, 84, 213, 170, 42, 255, 127, 0, 0, 255, 127, 0, 0, 255, 127, 255, 255, 84, 85, 84, 85, 255, 127, 255, 255, 255, 127, 255, 255, 84, 85, 84, 85, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 84, 213, 170, 42, 255, 127, 255, 255, 255, 127, 255, 255, 84, 213, 170, 42, 255, 127, 255, 255, 84, 85, 84, 85, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 84, 213, 170, 42, 84, 85, 84, 85, 255, 127, 255, 255, 255, 127, 0, 0, 255, 127, 255, 255, 84, 213, 170, 42, 255, 127, 0, 0, 255, 127, 255, 255, 84, 85, 84, 85, 255, 127, 255, 255, 84, 85, 84, 85, 255, 127, 255, 255, 255, 127, 0, 0, 255, 127, 255, 255, 84, 213, 170, 42, 255, 127, 0, 0, 255, 127, 255, 255, 255, 127, 255, 255, 84, 213, 170, 42, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 84, 213, 170, 42, 84, 213, 170, 42, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 84, 213, 170, 42, 84, 213, 170, 42, 255, 127, 255, 255, 84, 213, 170, 42, 255, 127, 0, 0, 255, 127, 255, 255, 84, 213, 170, 42, 255, 127, 0, 0, 255, 127, 255, 255, 255, 127, 255, 255, 84, 213, 170, 42, 255, 127, 255, 255, 255, 127, 255, 255, 84, 213, 170, 42)
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_jo6al")

[sub_resource type="ArrayMesh" id="ArrayMesh_emo2y"]
_surfaces = [{
"aabb": AABB(-0.143654, 0.00805244, -0.143654, 0.287309, 0.0506118, 0.287319),
"format": 34896613377,
"index_count": 48,
"index_data": PackedByteArray(6, 0, 11, 0, 1, 0, 7, 0, 12, 0, 3, 0, 8, 0, 9, 0, 2, 0, 5, 0, 10, 0, 0, 0, 8, 0, 12, 0, 4, 0, 5, 0, 9, 0, 4, 0, 6, 0, 10, 0, 4, 0, 7, 0, 11, 0, 4, 0, 4, 0, 9, 0, 8, 0, 2, 0, 9, 0, 5, 0, 0, 0, 10, 0, 6, 0, 4, 0, 10, 0, 5, 0, 1, 0, 11, 0, 7, 0, 4, 0, 11, 0, 6, 0, 3, 0, 12, 0, 8, 0, 4, 0, 12, 0, 7, 0),
"lods": [0.0640541, PackedByteArray(7, 0, 8, 0, 3, 0, 7, 0, 2, 0, 8, 0, 5, 0, 2, 0, 7, 0, 7, 0, 0, 0, 5, 0, 6, 0, 0, 0, 7, 0, 1, 0, 6, 0, 7, 0)],
"name": "Leaves",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 13,
"vertex_data": PackedByteArray(0, 0, 242, 255, 252, 255, 0, 0, 255, 255, 242, 255, 252, 255, 0, 0, 0, 0, 242, 255, 0, 0, 0, 0, 255, 255, 242, 255, 0, 0, 0, 0, 255, 127, 0, 0, 254, 127, 0, 0, 0, 0, 242, 255, 254, 127, 0, 0, 255, 127, 242, 255, 252, 255, 0, 0, 255, 255, 242, 255, 254, 127, 0, 0, 255, 127, 242, 255, 0, 0, 0, 0, 255, 63, 242, 255, 255, 63, 0, 0, 255, 63, 242, 255, 253, 191, 0, 0, 255, 191, 242, 255, 253, 191, 0, 0, 255, 191, 242, 255, 255, 63, 0, 0)
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_wcx5g"]
resource_name = "LeafPullPoint_Plane_005"
_surfaces = [{
"aabb": AABB(-0.143654, 0.00805244, -0.143654, 0.287309, 0.0506118, 0.287319),
"attribute_data": PackedByteArray(255, 63, 255, 63, 255, 79, 255, 63, 255, 63, 255, 47, 255, 79, 255, 47, 255, 71, 255, 55, 255, 71, 255, 55, 255, 71, 255, 55, 255, 71, 255, 55, 255, 63, 255, 55, 255, 63, 255, 55, 255, 63, 255, 55, 255, 71, 255, 63, 255, 71, 255, 63, 255, 71, 255, 63, 255, 79, 255, 55, 255, 79, 255, 55, 255, 79, 255, 55, 255, 71, 255, 47, 255, 71, 255, 47, 255, 71, 255, 47, 255, 67, 255, 51, 255, 67, 255, 51, 255, 67, 255, 59, 255, 67, 255, 59, 255, 75, 255, 59, 255, 75, 255, 59, 255, 75, 255, 51, 255, 75, 255, 51, 255, 71, 255, 63, 255, 79, 255, 55, 255, 71, 255, 47),
"format": 34896613399,
"index_count": 48,
"index_data": PackedByteArray(12, 0, 25, 0, 1, 0, 16, 0, 27, 0, 3, 0, 18, 0, 20, 0, 2, 0, 8, 0, 22, 0, 0, 0, 17, 0, 26, 0, 5, 0, 10, 0, 21, 0, 7, 0, 13, 0, 23, 0, 6, 0, 14, 0, 24, 0, 4, 0, 7, 0, 21, 0, 19, 0, 2, 0, 20, 0, 8, 0, 0, 0, 22, 0, 12, 0, 6, 0, 23, 0, 9, 0, 1, 0, 25, 0, 16, 0, 4, 0, 24, 0, 11, 0, 3, 0, 27, 0, 18, 0, 5, 0, 26, 0, 15, 0),
"lods": [0.0640541, PackedByteArray(29, 0, 30, 0, 3, 0, 29, 0, 2, 0, 30, 0, 8, 0, 2, 0, 29, 0, 29, 0, 0, 0, 8, 0, 28, 0, 0, 0, 29, 0, 1, 0, 28, 0, 29, 0)],
"material": SubResource("StandardMaterial3D_dl7k8"),
"name": "Leaves",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 31,
"vertex_data": PackedByteArray(0, 0, 242, 255, 252, 255, 255, 191, 255, 255, 242, 255, 252, 255, 255, 191, 0, 0, 242, 255, 0, 0, 255, 191, 255, 255, 242, 255, 0, 0, 255, 191, 255, 127, 0, 0, 254, 127, 231, 205, 255, 127, 0, 0, 254, 127, 133, 180, 255, 127, 0, 0, 254, 127, 231, 205, 255, 127, 0, 0, 254, 127, 133, 180, 0, 0, 242, 255, 254, 127, 255, 191, 0, 0, 242, 255, 254, 127, 231, 205, 0, 0, 242, 255, 254, 127, 133, 180, 255, 127, 242, 255, 252, 255, 231, 205, 255, 127, 242, 255, 252, 255, 255, 191, 255, 127, 242, 255, 252, 255, 231, 205, 255, 255, 242, 255, 254, 127, 231, 205, 255, 255, 242, 255, 254, 127, 133, 180, 255, 255, 242, 255, 254, 127, 255, 191, 255, 127, 242, 255, 0, 0, 133, 180, 255, 127, 242, 255, 0, 0, 255, 191, 255, 127, 242, 255, 0, 0, 133, 180, 255, 63, 242, 255, 255, 63, 255, 191, 255, 63, 242, 255, 255, 63, 133, 180, 255, 63, 242, 255, 253, 191, 255, 191, 255, 63, 242, 255, 253, 191, 231, 205, 255, 191, 242, 255, 253, 191, 231, 205, 255, 191, 242, 255, 253, 191, 255, 191, 255, 191, 242, 255, 255, 63, 133, 180, 255, 191, 242, 255, 255, 63, 255, 191, 255, 127, 242, 255, 252, 255, 22, 198, 255, 255, 242, 255, 254, 127, 89, 193, 255, 127, 242, 255, 0, 0, 251, 187, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 22, 239, 26, 157, 115, 240, 21, 165, 227, 226, 22, 111, 233, 218, 116, 112, 255, 255, 255, 127, 227, 226, 22, 111, 233, 218, 116, 112, 22, 239, 26, 157, 255, 255, 255, 127, 227, 226, 22, 111, 22, 239, 26, 157, 115, 240, 21, 165, 255, 255, 255, 127, 115, 240, 21, 165, 255, 255, 255, 127, 233, 218, 116, 112, 255, 255, 255, 127, 233, 218, 116, 112, 255, 255, 255, 127, 227, 226, 22, 111, 22, 239, 26, 157, 255, 255, 255, 127, 115, 240, 21, 165, 255, 255, 255, 127, 218, 254, 79, 145, 207, 250, 163, 150, 128, 255, 35, 107)
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_emo2y")

[sub_resource type="SphereShape3D" id="SphereShape3D_ti7pa"]
radius = 0.05

[node name="LeafPullPoint" type="Node3D" node_paths=PackedStringArray("pulled_leaf")]
script = ExtResource("1_553wl")
pull_rumble = SubResource("Resource_lgjmh")
pulled_leaf = NodePath("PullLeaf")

[node name="LeafPullPoint" type="Node3D" parent="."]

[node name="PullPoint" type="MeshInstance3D" parent="LeafPullPoint"]
mesh = SubResource("ArrayMesh_6vicp")
skeleton = NodePath("")

[node name="RemoteTransform3D" type="RemoteTransform3D" parent="LeafPullPoint/PullPoint"]
transform = Transform3D(1.165, 0, 0, 0, 1.165, 0, 0, 0, 1.165, 0, 0, 0)
remote_path = NodePath("../../../Pull Origin/Pull Pickup/XRToolsHighlightVisible/Highlight")

[node name="Blossom" type="MeshInstance3D" parent="LeafPullPoint"]
transform = Transform3D(0.277362, 0, 0, 0, 0.277362, 0, 0, 0, 0.277362, 0, -0.00615652, 0)
mesh = SubResource("ArrayMesh_wcx5g")
skeleton = NodePath("")

[node name="Pull Origin" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0186158, 0)

[node name="Pull Pickup" parent="Pull Origin" instance=ExtResource("3_fh8m4")]
freeze = true
freeze_mode = 0
ranged_grab_method = 0

[node name="CollisionShape3D" parent="Pull Origin/Pull Pickup" index="0"]
shape = SubResource("SphereShape3D_ti7pa")

[node name="XRToolsHighlightVisible" type="Node3D" parent="Pull Origin/Pull Pickup"]
script = ExtResource("4_5ntvn")

[node name="Highlight" type="MeshInstance3D" parent="Pull Origin/Pull Pickup/XRToolsHighlightVisible"]
transform = Transform3D(1.165, 0, 0, 0, 1.165, 0, 0, 0, 1.165, 0, -0.0186158, 0)
lod_bias = 0.001
mesh = SubResource("ArrayMesh_6vicp")
skeleton = NodePath("")
surface_material_override/0 = ExtResource("5_j0x7c")

[node name="PullLeaf" parent="." instance=ExtResource("8_6fdsa")]
transform = Transform3D(1.28028e-08, -1, 7.462e-08, -0.707107, -6.18172e-08, -0.707107, 0.707107, -4.37114e-08, -0.707107, 0, 0, 0)

[connection signal="dropped" from="Pull Origin/Pull Pickup" to="." method="_on_pull_pickup_dropped"]
[connection signal="picked_up" from="Pull Origin/Pull Pickup" to="." method="_on_pull_pickup_picked_up"]

[editable path="Pull Origin/Pull Pickup"]
